# PyMorpionSolitaire

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
PyMorpionSolitaire/: __init__.py
binder/: environment.yml
data/: cross4D_mc.npy  cross4D_nested.npy  cross4D_nested2.npy  cross4D_nested3.npy  cross4D_nested4.npy  cross4T_mc.npy  cross4T_nested.npy  cross4T_nested2.npy  cross4T_nested3.npy  cross4T_nested4.npy  cross5D_mc.npy  cross5D_nested.npy  cross5D_nested2.npy  cross5D_nested3.npy  cross5D_nested4.npy  cross5T_mc.npy  cross5T_nested.npy  cross5T_nested2.npy  cross5T_nested3.npy  cross5T_nested4.npy  pipe5D_mc.npy  pipe5D_nested.npy  pipe5D_nested2.npy  pipe5D_nested3.npy  pipe5D_nested4.npy  pipe5T_mc.npy  pipe5T_nested.npy  pipe5T_nested2.npy  pipe5T_nested3.npy  pipe5T_nested4.npy  test_game.json
data/nested-4-games/: cross4D_035_11016.json  cross4D_035_27053.json  cross4D_035_54952.json  cross4D_035_67307.json  cross4D_035_94041.json  cross4T_062_00549.json  cross4T_062_71395.json  cross4T_062_71825.json  cross4T_062_82388.json  cross4T_062_83351.json  cross5D_076_07472.json  cross5D_076_20852.json  cross5D_076_31031.json  cross5D_076_31753.json  cross5D_076_46673.json  cross5D_076_61986.json  cross5D_078_40421.json  cross5D_078_56401.json  cross5D_078_99960.json  cross5D_080_68245.json  cross5T_142_99455.json  cross5T_143_25720.json  cross5T_143_36248.json  cross5T_143_90561.json  cross5T_144_08474.json  cross5T_144_61223.json  cross5T_145_43151.json  cross5T_145_80371.json  cross5T_145_81028.json  cross5T_146_11985.json  cross5T_146_69882.json  cross5T_146_73145.json  cross5T_146_78863.json  cross5T_146_90386.json  cross5T_146_97245.json  cross5T_147_02778.json  cross5T_147_24430.json  cross5T_147_33957.json  cross5T_147_35622.json  cross5T_147_36902.json  (+115 more)
data/temp/: cross5T_022_41724.json  cross5T_031_22413.json  cross5T_087_33204.json  cross5T_087_83463.json  cross5T_088_57374.json  cross5T_090_01538.json  cross5T_090_12013.json  cross5T_099_12530.json  cross5T_102_34161.json  cross5T_102_47604.json  cross5T_105_60512.json  cross5T_133_21984.json  pipe5T_112_70261.json
examples/: 01_basic_usage.ipynb  02_statistics.ipynb  test_game.json
include/: Coordinates.h  Game.h  GraphGame.h  Grid.h  GridDTO.h  GridFootprint.h  GridMove.h  Image.h  ImageMove.h  Line.h  Move.h  Node.h  Point.h
pymorpionsolitaire/: __init__.py
src/: Coordinates.cpp  Game.cpp  GraphGame.cpp  Grid.cpp  GridDTO.cpp  GridFootprint.cpp  Image.cpp  Line.cpp  PlayNestedMC.cpp  Point.cpp  PyMorpionSolitaire.cpp
tests/: GameTest.cpp  GraphGameTest.cpp
